2006-09-21  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.c (read_pixel_data_1) (write_pixel_data_1):
	use the same code on all platforms. The optimization for bytes == 4
	was pointless anyway.

2006-09-21  Michael Natterer  <mitch@gimp.org>

	* app/base/tile-manager.c (read_pixel_data_1): fix build on
	big endian.

2006-09-21  Michael Natterer  <mitch@gimp.org>

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): use
	setpgid() instead of setpgrp(), the latter has a different number
	of arguments on darwin. Let's see where it breaks now...

2006-09-20  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolornotebook.c: use canonical names for
	style properties.

2006-09-20  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpcanvas.[ch]
	* app/tools/gimpdrawtool.[ch]: remove recently added code relating
	to stippled xor drawing -- not handled well by some display
	drivers.
	
	* app/tools/gimprectangletool.c: improve drawing of handles.
	
2006-09-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c (drw_set_name): use
	PyUnicode_Check() instead of PyString_Check().

	* plug-ins/pygimp/plug-ins/clothify.py: reverted localisation;
	this plug-in isn't installed by default.

2006-09-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/clothify.py
	* plug-ins/pygimp/plug-ins/gimpcons.py: need to call gettext.install
	here, otherwise we can't use _() in the register() call.

	* plug-ins/pygimp/gimpfu.py: don't call gettext.install() for the
	plug-in. Translate the blurb used as a user hint.

2006-09-20  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.c (read_pixel_data_1) (write_pixel_data_1):
	fixed endian issues (bug #340965).

2006-09-20  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin.c (gimp_plug_in_close): if the plug-in is
	in a different process group than GIMP, kill the entire group so
	the plug-in's children are killed too.
